# mcp-cut

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_cut/: __main__.py  draft.py  paths.py  server.py
tests/: sample-en.srt  test_draft.py
