[project]
name = "mcp-cut"
version = "0.1.0"
description = "MCP server that programmatically builds CapCut drafts on macOS"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
mcp-cut = "mcp_cut.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cut"]
